--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Keep track of how long small tasks take with this distraction free stopwatch and todo list."
+    />
     <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=Roboto+Mono:wght@500"
-      rel="stylesheet"
-    />
     <title>stopwatch</title>
   </head>
   <body>
