--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
       name="description"
       content="Keep track of how long small tasks take with this distraction free stopwatch and todo list."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon.png" />
