update meta description

--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Keep track of how long small tasks take with this distraction free stopwatch and todo list."
-    />
+    <meta name="description" content="A stopwatch." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon.png" />
