refactor(cut down on fonts and tweak some styles)

--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="A stopwatch." />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="apple-touch-icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐮</text></svg>"
-    />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐮</text></svg>"
-    />
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐮</text></svg>"
-    />
+    <meta name="theme-color" content="#6b60a8" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="Running Clock" />
+    <link rel="apple-touch-icon" href="./src/assets/favicon.svg" />
+    <link rel="icon" href="./src/assets/favicon.svg" />
+    <link rel="mask-icon" href="./src/favicon.svg" color="#FFFFFF" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>stopwatch</title>
   </head>
   <body>
